[package]
name = "protective-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
toml = "0.9.2"
lazy_static = "1.5.0"
log = "0.4.27"
simplelog = {version = "0.12.2", features = ["paris"]}
hyper-rustls = {version = "0.27.7", features = ["http2", "webpki-roots"]}
